--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personality_test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jonathanAK.github.io/personality_test",
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
     "@types/jest": "24.0.13",
@@ -14,9 +15,11 @@
     "@types/redux": "^3.6.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "lodash": "^4.17.11",
+    "gh-pages": "^2.0.1",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-items-carousel": "^2.3.6",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -28,10 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
